force-app/main/default/objects/EBD__c/EBD__c.object-meta.xml
<CustomObject>
    <label>EBD</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>EBD Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EBDS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>