force-app/main/default/objects/EBD__c/fields/Brief_Company_Description__c.field-meta.xml
<CustomField>
    <fullName>Brief_Company_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Brief Company Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>