force-app/main/default/objects/EBD__c/fields/Business_Group_on_Health__c.field-meta.xml
<CustomField>
    <fullName>Business_Group_on_Health__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Group on Health</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>