force-app/main/default/objects/EBD__c/fields/Client_s_Interest__c.field-meta.xml
<CustomField>
    <fullName>Client_s_Interest__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Client&apos;s Interest</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>