force-app/main/default/objects/EBD__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Company Name</label>
    <type>TextArea</type>
</CustomField>