force-app/main/default/objects/EBD__c/fields/Current_Medical_Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>Current_Medical_Contract_Term__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Medical Contract Term</label>
    <type>Date</type>
</CustomField>