force-app/main/default/objects/EBD__c/fields/Current_Medical_Deal_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Medical_Deal_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Medical Deal Start Date</label>
    <type>Date</type>
</CustomField>