force-app/main/default/objects/EBD__c/fields/EBD_Sce_Validated_Time__c.field-meta.xml
<CustomField>
    <fullName>EBD_Sce_Validated_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EBD Sce Validated Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>