force-app/main/default/objects/EBD__c/fields/EBD_Sce_Validation__c.field-meta.xml
<CustomField>
    <fullName>EBD_Sce_Validation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EBD Sce Validation</label>
    <referenceTo>User</referenceTo>
    <relationshipName>EBDS</relationshipName>
    <type>Lookup</type>
</CustomField>