force-app/main/default/objects/EBD__c/fields/EBD_Validation_Name__c.field-meta.xml
<CustomField>
    <fullName>EBD_Validation_Name__c</fullName>
    <formula>EBD_Sce_Validation__r.FirstName + &apos; &apos; +  EBD_Sce_Validation__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EBD Validation Name</label>
    <type>Text</type>
</CustomField>