force-app/main/default/objects/EBD__c/fields/Enterprise_Executive_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Executive_Sponsor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Enterprise Executive Sponsor</label>
    <type>TextArea</type>
</CustomField>