force-app/main/default/objects/EBD__c/fields/Involvement_In_CAC__c.field-meta.xml
<CustomField>
    <fullName>Involvement_In_CAC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Involvement In CAC</label>
    <type>Checkbox</type>
</CustomField>