force-app/main/default/objects/EBD__c/fields/Next_Medical_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Medical_Renewal_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Next Medical Renewal Date</label>
    <type>Date</type>
</CustomField>