force-app/main/default/objects/EBD__c/fields/Optum_Executive_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Optum_Executive_Sponsor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Optum Executive Sponsor</label>
    <type>TextArea</type>
</CustomField>