force-app/main/default/objects/EBD__c/fields/Relationship_History__c.field-meta.xml
<CustomField>
    <fullName>Relationship_History__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Relationship History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>