force-app/main/default/objects/EBD__c/fields/SCE__c.field-meta.xml
<CustomField>
    <fullName>SCE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SCE</label>
    <type>TextArea</type>
</CustomField>