force-app/main/default/objects/EBD__c/fields/Surest_Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>Surest_Contract_Term__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Surest Contract Term</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>