force-app/main/default/objects/EBD__c/fields/Surest_Executive_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Surest_Executive_Sponsor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Surest Executive Sponsor</label>
    <type>TextArea</type>
</CustomField>