force-app/main/default/objects/EBD__c/fields/Surest_Next_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Surest_Next_Renewal_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Surest Next Renewal Date</label>
    <type>Date</type>
</CustomField>