force-app/main/default/objects/EBD__c/fields/UHC_Executive_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>UHC_Executive_Sponsor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UHC Executive Sponsor</label>
    <type>TextArea</type>
</CustomField>