force-app/main/default/objects/EBD__c/fields/UHC_Services__c.field-meta.xml
<CustomField>
    <fullName>UHC_Services__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UHC Services</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>