force-app/main/default/objects/EBD__c/fields/VPCR_RVP__c.field-meta.xml
<CustomField>
    <fullName>VPCR_RVP__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>VPCR / RVP</label>
    <type>TextArea</type>
</CustomField>