force-app/main/default/objects/EBD__c/fields/X10_Savings_Plan__c.field-meta.xml
<CustomField>
    <fullName>X10_Savings_Plan__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>10% Savings Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>